fix: rename folders to proper clean architecture naming, improve swagger documentation, add h ealth check endpoint
