# internal/delivery/http_server/http_server.go
@@ -3,12 +3,11 @@ package http_server
 import (
 	"fmt"
 	"log/slog"
+	"net/http"
 
-	"github.com/kafkaphoenix/gotemplate/internal/infrastructure/config"
+	"github.com/kafkaphoenix/gotemplate/internal/repository/config"
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
-
-	_ "github.com/kafkaphoenix/gotemplate/docs" // docs is generated by Swag CLI, mandatory to import it
 )
 
 type HTTPServer struct {
@@ -16,17 +15,21 @@ type HTTPServer struct {
 	server *echo.Echo
 }
 
-// @title GoTemplate API
-// @version 1.0
-// @description GoTemplate is a microservice example that follows clean architecture
-
-// @license.name MIT
-// @license.url https://github.com/kafkaphoenix/gotemplate/?tab=MIT-1-ov-file#readme
 func New(l *slog.Logger) *HTTPServer {
 	e := echo.New()
 	e.HideBanner = true
 	e.HidePort = true
+
+	// Register swagger docs
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
+
+	// Middleware
+	// e.Use(middleware.Logger())
+	// e.Use(middleware.Recover())
+	// e.Use(middleware.CORS())
+
+	e.GET("/health", healthCheck)
+
 	return &HTTPServer{
 		logger: l,
 		server: e,
@@ -44,4 +47,21 @@ func (s *HTTPServer) Start(cfg *config.AppConfig) error {
 	addr := fmt.Sprintf(":%d", cfg.App.Port)
 	s.logger.Info("Starting server", slog.Int("port", cfg.App.Port))
 	return s.server.Start(addr)
+}
+
+type StatusResponse struct {
+	Status string `json:"status" example:"ok"`
+}
+
+// healthCheck returns the health status of the service.
+//
+// @Summary      Health Check
+// @Description  Returns the health status of the service.
+// @ID           health-check
+// @Tags         health
+// @Produce      json
+// @Success      200  {object} StatusResponse "ok"
+// @Router       /health [get]
+func healthCheck(c echo.Context) error {
+	return c.JSON(http.StatusOK, StatusResponse{Status: "ok"})
 }
