# internal/delivery/http_server/user_handler.go
@@ -6,17 +6,17 @@ import (
 	"strconv"
 
 	"github.com/google/uuid"
-	"github.com/kafkaphoenix/gotemplate/internal/domain"
-	"github.com/kafkaphoenix/gotemplate/internal/usecase"
+	"github.com/kafkaphoenix/gotemplate/internal/entities"
+	"github.com/kafkaphoenix/gotemplate/internal/usecases"
 	"github.com/labstack/echo/v4"
 )
 
 type UserHandler struct {
 	logger  *slog.Logger
-	service usecase.UserService
+	service usecases.UserService
 }
 
-func NewUserHandler(l *slog.Logger, s usecase.UserService) *UserHandler {
+func NewUserHandler(l *slog.Logger, s usecases.UserService) *UserHandler {
 	return &UserHandler{
 		logger:  l,
 		service: s,
@@ -31,18 +31,26 @@ func (h *UserHandler) RegisterRoutes(e *echo.Echo) {
 	g.GET("", h.List)
 }
 
-// CreateUser godoc
-// @Summary      Create an User
-// @Description  Given a User object, it creates a new user in the system
+// Create creates a new user based on the data provided.
+//
+// @Summary      Create a User
+// @Description  Creates a new User based on the data provided.
+// @ID           create-user
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        id   path      int  true  "Account ID"
-// @Success      201  {object}  domain.User
-// @Failure      500  {object}  string
+// @Param        FirstName  path  string  true  "First name of the user"
+// @Param        LastName   path  string  true  "Last name of the user"
+// @Param        Nickname   path  string  true  "Nickname of the user"
+// @Param        Password   path  string  true  "Password of the user"
+// @Param        Email      path  string  true  "Email of the user"
+// @Param        Country    path  string  true  "Country of the user"
+// @Success      201  {object} entities.User
+// @Failure      400  "Invalid input"
+// @Failure      500  "Internal server error"
 // @Router       /users [post]
 func (h *UserHandler) Create(c echo.Context) error {
-	var req domain.User
+	var req entities.User
 	if err := c.Bind(&req); err != nil {
 		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid input"})
 	}
@@ -58,6 +66,26 @@ func (h *UserHandler) Create(c echo.Context) error {
 	return c.JSON(http.StatusCreated, newUser)
 }
 
+// Update updates a user based on the given ID and the provided data.
+//
+// @Summary      Update a User
+// @Description  Updates a User based on the given ID and the provided data.
+// @ID           update-user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id         path  string  true  "ID of the user"
+// @Param        FirstName  path  string  true  "First name of the user"
+// @Param        LastName   path  string  true  "Last name of the user"
+// @Param        Nickname   path  string  true  "Nickname of the user"
+// @Param        Password   path  string  true  "Password of the user"
+// @Param        Email      path  string  true  "Email of the user"
+// @Param        Country    path  string  true  "Country of the user"
+// @Success      204  "No content"
+// @Failure      400  "Invalid user ID"
+// @Failure      400  "Invalid input"
+// @Failure      500  "Internal server error"
+// @Router       /users/{id} [patch]
 func (h *UserHandler) Update(c echo.Context) error {
 	id := c.Param("id")
 	uid, err := uuid.Parse(id)
@@ -65,7 +93,7 @@ func (h *UserHandler) Update(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid user ID"})
 	}
 
-	var req domain.User
+	var req entities.User
 	if err := c.Bind(&req); err != nil {
 		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid input"})
 	}
@@ -78,6 +106,18 @@ func (h *UserHandler) Update(c echo.Context) error {
 	return c.NoContent(http.StatusNoContent)
 }
 
+// Delete removes a User based on the given ID.
+//
+// @Summary      Delete a User
+// @Description  Removes a User based on the given ID.
+// @ID           delete-user
+// @Produce      json
+// @Tags         users
+// @Param        id  path  string  true  "ID of the user"
+// @Success      204  "No content"
+// @Failure      400  "Invalid user ID"
+// @Failure      500  "Internal server error"
+// @Router       /users/{id} [delete]
 func (h *UserHandler) Delete(c echo.Context) error {
 	id := c.Param("id")
 	uid, err := uuid.Parse(id)
@@ -92,6 +132,20 @@ func (h *UserHandler) Delete(c echo.Context) error {
 	return c.NoContent(http.StatusNoContent)
 }
 
+// List returns a list of Users optionally filtered by country, limit and offset.
+//
+// @Summary      List Users
+// @Description  Returns a list of Users optionally filtered by country, limit and offset.
+// @ID           list-users
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        country  query  string  false  "Country of the user"
+// @Param        limit    query  int     false  "Limit of users to be listed"
+// @Param        offset   query  int     false  "Offset of users to be listed"
+// @Success      200  {array} entities.User
+// @Failure      500  "Internal server error"
+// @Router       /users [get]
 func (h *UserHandler) List(c echo.Context) error {
 	country := c.QueryParam("country")
 	limit := c.QueryParam("limit")
